extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__converts_basic_root_file.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".moon/tasks/node.yml\")).unwrap()"
---
implicitInputs:
- .env
- tsconfig.json
- .env.local
- .env
- $GITHUB_TOKEN
tasks:
  build:
    command: npm run build
    deps:
    - ^:build
    outputs:
    - dist/**/*
    options:
      envFile: true
  dev:
    command: npm run dev
    inputs:
    - $SECRET_KEY
    local: true
    options:
      cache: false
  test:
    command: npm run test
    deps:
    - ~:build
    inputs:
    - src/**/*.tsx
    - src/**/*.ts
    - test/**/*.ts

