extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__converts_project_files.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".moon/tasks/node.yml\")).unwrap()"
---
tasks:
  build:
    command: yarn run build
    deps:
    - ^:build
    outputs:
    - dist/**/*

