extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__converts_to_a_root_project.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\"moon.yml\")).unwrap()"
---
language: javascript
platform: node
tasks:
  build:
    command: npm run build

