extensions/migrate-turborepo/tests/snapshots/migrate_turborepo_test__migrate_turborepo__merges_with_existing_root_tasks.snap
---
source: crates/migrate-turborepo/tests/migrate_turborepo_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".moon/tasks/node.yml\")).unwrap()"
---
tasks:
  build:
    command: pnpm run build
    deps:
    - ^:build
    outputs:
    - dist/**/*
  lint:
    command: eslint

